--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "essentials",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mhuzkhan.github.io/ReactEssentials",
   "type": "module",
   "scripts": {
     "dev": "vite",
